<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/text_learnmath"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintDimensionRatio=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTextFirstNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/edit_firstNumber"
                        android:inputType="textPersonName|numberDecimal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextSecondNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:ems="10"
                        android:hint="@string/edit_secondNumber"
                        android:inputType="textPersonName|numberDecimal"
                        app:layout_constraintEnd_toEndOf="@+id/editTextFirstNumber"
                        app:layout_constraintStart_toStartOf="@+id/editTextFirstNumber"
                        app:layout_constraintTop_toBottomOf="@+id/editTextFirstNumber" />

                    <TextView
                        android:id="@+id/textViewResult"
                        android:layout_width="0dp"
                        android:layout_height="44dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/editTextFirstNumber"
                        app:layout_constraintStart_toStartOf="@+id/editTextFirstNumber"
                        app:layout_constraintTop_toBottomOf="@+id/editTextSecondNumber" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16sp"
                        android:layout_weight="1"
                        android:onClick="buttonClicked"
                        android:tag="1"
                        android:text="@string/button_add" />

                    <Button
                        android:id="@+id/buttonSubtraction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16sp"
                        android:layout_weight="1"
                        android:onClick="buttonClicked"
                        android:tag="2"
                        android:text="@string/button_subtraction" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonMultiplation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16sp"
                        android:layout_weight="1"
                        android:onClick="buttonClicked"
                        android:tag="3"
                        android:text="@string/button_multiplication" />

                    <Button
                        android:id="@+id/buttonDevice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16sp"
                        android:layout_marginRight="16sp"
                        android:layout_weight="1"
                        android:onClick="buttonClicked"
                        android:tag="4"
                        android:text="@string/button_division" />
                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>